--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Σ DriftField Visualizer + Audio Choir</title>
+    <title>Σ DriftField Visualizer (CSP Safe)</title>
     <style>
         body {
             margin: 0;
@@ -13,8 +12,8 @@
     </style>
 </head>
 <body>
-    <script src="DriftField_RealCore.js"></script>
-    <script src="DriftField_VisualMap_EnergyColor.js"></script>
+    <script src="DriftField_RealCore_CSP.js"></script>
+    <script src="DriftField_VisualMap_EnergyColor_CSP.js"></script>
     <script src="DriftField_AudioLayer.js"></script>
 </body>
 </html>
